1. Fix mobile menu is covered by image; 2. home page: add responsive;

--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -51,3 +51,33 @@
     height: 50px;
     filter: grayscale(1);
 }
+
+
+@media (max-width: 1024px) {
+    .container {
+      flex-direction: column;
+      text-align: center;
+    }
+    /* must have, or the image will not show */
+    .imagecontainer {
+        min-height: 300px;
+    }
+    /* keep the right ratio */
+    .heroimage {
+        object-fit: contain;
+    }
+  
+    .buttons{
+      justify-content: center;
+    }
+  }
+  
+  @media (max-width: 768px) {
+    .heading {
+      font-size: 64px;
+    }
+  
+    .brands{
+      width: 100%;
+    }
+  }
